test/parser/ast/pattern/malformed_error2.exp
Error: Unexpected token `-`, expected start of pattern
test/parser/ast/pattern/malformed_error2.myte:5:6
 5 |   val - = 1;
   |       ^