test/parser/ast/pattern/malformed_error2.myte
module Test

fun main() {
  // Minus has special handling as it could be the start of a negative (Int)eger literal
  val - = 1;
}